--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="logo.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımızda</title>
@@ -52,7 +53,7 @@
 <sub> (Alt simge) Etiketi
 <sup> (Üst simge) Etiketi -->
 
-  <a href="ana_sayfa.html">
+  <a href="index.html">
     <buton class="anadon">ana sayfaya dön</buton>
     </div>
     
