--- a/cocuk.html
+++ b/cocuk.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <link rel="icon" href="logo.png"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Çocuk Kategorisi</title>
@@ -10,25 +11,13 @@
 
   <style>
     body {
-      padding-top: 56px; 
+      padding-top: 56px; /* Navbar'ın üzerinde içerik göstermek için gerekli bir ayar */
     }
   </style>
+
 </head>
 <body>
   
-  <header>
-    <h1 class="baslik">Kitap E-Ticaret</h1>
-    <nav>
-      <ul>
-        <li><a href="ana_sayfa.html" class="menu-link">Anasayfa</a></li>
-        <li><a href="kitaplar.html" class="menu-link">Kitaplar</a></li>
-        <li><a href="hakkimizda.html" target="_blank", class="menu-link">Hakkımızda</a></li>
-        <li><a href="hesapGiris.html" class="menu-link">Hesabım</a></li>
-      </ul>
-    </nav>
-  </header>
-
-
 <article class="urun">
   <img src="https://i.dr.com.tr/cache/154x170-0/originals/0001716507001-1.jpg" alt="Beyaz Dis" class="urun-resim">
   <h2 class="urun-baslik">Beyaz Diş</h2>
@@ -76,7 +65,7 @@
   
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="ana_sayfa.html">Pehlivan Yayınları</a>
+    <a class="navbar-brand" href="index.html">Pehlivan Yayınları</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
