--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="logo.png"/> 
   <link rel="stylesheet" href="uveys.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -17,7 +18,7 @@
     <h1 class="baslik">Pehlivan Yayınları</h1>
     <nav>
       <ul>
-        <li><a href="ana_sayfa.html" class="menu-link">Anasayfa</a></li>
+        <li><a href="index.html" class="menu-link">Anasayfa</a></li>
         <li><a href="kitaplar.html" class="menu-link">Kitaplar</a></li>
         <li><a href="hakkimizda.html" target="_blank", class="menu-link">Hakkımızda</a></li>
         <li><a href="hesapGiris.html" class="menu-link">Hesabım</a></li>
