--- a/kitaplar.html
+++ b/kitaplar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <link rel="icon" href="logo.png"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kişisel Gelisim Kategorisi</title>
@@ -58,7 +59,7 @@
 </div>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="ana_sayfa.html">Pehlivan Yayınları</a>
+    <a class="navbar-brand" href="index.html">Pehlivan Yayınları</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
