--- a/roman2.html
+++ b/roman2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roman Kategorisi</title>
-
+  <link rel="icon" href="logo.png"/>
   <link rel="stylesheet" href="uveys.css">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -62,7 +62,7 @@
   
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="ana_sayfa.html">Pehlivan Yayınları</a>
+    <a class="navbar-brand" href="index.html">Pehlivan Yayınları</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
