--- a/tarih.html
+++ b/tarih.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="uveys.css">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-
+  <link rel="icon" href="logo.png"/>
   <style>
     body {
       padding-top: 56px; /* Navbar'ın üzerinde içerik göstermek için gerekli bir ayar */
@@ -63,7 +63,7 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="ana_sayfa.html">Pehlivan Yayınları</a>
+    <a class="navbar-brand" href="index.html">Pehlivan Yayınları</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
